bases/longhorn-system/longhorn/longhorn-driver-deployer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: longhorn-driver-deployer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: longhorn-driver-deployer
  template:
    metadata:
      labels:
        app: longhorn-driver-deployer
    spec:
      containers:
        - name: longhorn-driver-deployer
          image: longhornio/longhorn-manager:v1.1.0
          imagePullPolicy: IfNotPresent
          command:
            - longhorn-manager
            - -d
            - deploy-driver
            - --manager-image
            - longhornio/longhorn-manager:v1.1.0
            - --manager-url
            - http://longhorn-backend:9500/v1
      serviceAccountName: longhorn-service-account
      securityContext:
        runAsUser: 0
