bases/longhorn-system/longhorn/longhorn-manager-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: longhorn-manager
  name: longhorn-manager
spec:
  selector:
    matchLabels:
      app: longhorn-manager
  template:
    metadata:
      labels:
        app: longhorn-manager
    spec:
      containers:
        - name: longhorn-manager
          image: longhornio/longhorn-manager:v1.1.0
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
          command:
            - longhorn-manager
            - -d
            - daemon
            - --engine-image
            - longhornio/longhorn-engine:v1.1.0
            - --instance-manager-image
            - longhornio/longhorn-instance-manager:v1_20201216
            - --share-manager-image
            - longhornio/longhorn-share-manager:v1_20201204
            - --manager-image
            - longhornio/longhorn-manager:v1.1.0
            - --service-account
            - longhorn-service-account
          ports:
            - containerPort: 9500
              name: manager
          readinessProbe:
            tcpSocket:
              port: 9500
          volumeMounts:
            - name: dev
              mountPath: /host/dev/
            - name: proc
              mountPath: /host/proc/
            - name: longhorn
              mountPath: /var/lib/longhorn/
              mountPropagation: Bidirectional
            - name: deadpool
              mountPath: /media/deadpool/
              mountPropagation: Bidirectional
            - name: longhorn-settings
              mountPath: /var/lib/longhorn-setting/
      volumes:
        - name: dev
          hostPath:
            path: /dev/
        - name: proc
          hostPath:
            path: /proc/
        - name: longhorn
          hostPath:
            path: /var/lib/longhorn/
        - name: deadpool
          hostPath:
            path: /media/deadpool/
        - name: longhorn-settings
          configMap:
            name: longhorn-settings
      #      imagePullSecrets:
      #      - name: ""
      serviceAccountName: longhorn-service-account
  updateStrategy:
    rollingUpdate:
      maxUnavailable: "100%"
