bases/longhorn-system/longhorn/longhorn-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: longhorn-ui
  name: longhorn-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: longhorn-ui
  template:
    metadata:
      labels:
        app: longhorn-ui
    spec:
      containers:
        - name: longhorn-ui
          image: longhornio/longhorn-ui:v1.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: http
          resources: {}
#      imagePullSecrets:
#      - name:
